--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,50 @@ version: '3.0'
 services:
   elasticsearch:
     container_name: elasticsearch
-    image: elasticsearch
-    links:
-      - parsedmarc
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
+    environment:
+      - discovery.type=single-node
+        #- bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xmx2g -Xms2g"
     volumes:
-      - ./config/parsedmarc/:/etc/nginx/nginx.conf:ro
+      - ./data/esnode0:/usr/share/elasticsearch/data
+    restart: always
+ 
+  davmail:
+    container_name: davmail
+    image: jberrenberg/davmail
+    expose:
+      - 1143
+    volumes:
+      - ./config/davmail.properties:/etc/davmail/davmail.properties:ro
     restart: always
 
   parsedmarc:
     container_name: parsedmarc
-    image: parsedmarc
-    build: .
+    image: bongoeadgc6/parsedmarc:stable
     links:
       - elasticsearch
+      - davmail
     volumes:
       - ./config/parsedmarc.ini:/etc/parsedmarc.ini:ro
-      - ./config/.davmail:/etc/davmail:ro
+    restart: always
 
   kibana:
     container_name: kibana
-    image: kibana
+    image: docker.elastic.co/kibana/kibana:7.3.1
     links:
       - elasticsearch
+    ports:
+      - 5601:5601
     environment:
-      - VIRTUAL_HOST=cloud.radnetmgt.com
+      - SERVER_NAME=dmarc.radnetmgt.com
+      #- ELASTICSEARCH_HOSTS=http://elasticsearch:
+      - VIRTUAL_HOST=dmarc.radnetmgt.com
       - VIRTUAL_NETWORK=proxy-ssl
-      - VIRTUAL_PORT=80
+      - VIRTUAL_PORT=5601
       - CERT_NAME=shared
+        #volumes:
+            #- ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
     restart: always
     networks:
       - front
